[project]
name = "ComfyUI-DepthAnythingV3"
description = "ComfyUI nodes to use Depth Anything V3, the latest depth estimation model from ByteDance. For now monocular depth, camera pose estimation and 3D point clouds/gaussians are supported. Models autodownload from HuggingFace."
version = "0.1.1"
license = {file = "LICENSE"}

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "Depth Anything V3"
Icon = ""
