[project]
name = "ComfyUI-DepthAnythingV3"
description = "ComfyUI nodes to use Depth Anything V3, the latest depth estimation model from ByteDance. For now monocular depth, camera pose estimation and 3D point clouds/gaussians are supported. Models autodownload from HuggingFace."
version = "0.1.1"
license = "Apache-2.0"
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-DepthAnythingV3"
#  Used by Comfy Registry https://comfyregistry.org

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "Depth Anything V3"
Icon = ""
