[project]
name = "comfyui-depthanythingv3"
description = "ComfyUI nodes to use Depth Anything V3, great depth estimation model from ByteDance."
version = "0.1.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-DepthAnythingV3"

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "Depth Anything V3"
Icon = ""
